--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
     "react-type-animation": "^3.2.0",
