--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-responsive-carousel": "^3.2.23",
